Fix wnprc related teamcity test failures. Modified .gradle files following pattern of wnprc_billing module for wnprc_billingpublic.
SVN r59875 |2018-08-26 21:17:18 +0000

--- a/gradle/settings/community.gradle
+++ b/gradle/settings/community.gradle
@@ -25,7 +25,7 @@ buildscript {
 }
 import org.labkey.gradle.util.BuildUtils
 
-BuildUtils.includeModules(this.settings, rootDir, [BuildUtils.SERVER_MODULES_DIR, BuildUtils.CUSTOM_MODULES_DIR], BuildUtils.EHR_MODULE_NAMES + ["ehr_billing", "wnprc_billing"])
+BuildUtils.includeModules(this.settings, rootDir, [BuildUtils.SERVER_MODULES_DIR, BuildUtils.CUSTOM_MODULES_DIR], BuildUtils.EHR_MODULE_NAMES + ["ehr_billing", "wnprc_billing", "wnprc_billingpublic"])
 
 // include the test distribution, which is used to create an artifact for TeamCity to pass around to the agents
 include ":server:test:distributions:teamcity"
