--- a/gradle/settings/ehr.gradle
+++ b/gradle/settings/ehr.gradle
@@ -40,6 +40,7 @@ for (String module : BuildUtils.EHR_MODULE_NAMES)
 }
 include ":server:customModules:ehr_billing"
 include ":server:customModules:wnprc_billing"
+include ":server:customModules:wnprc_billingpublic"
 include ":server:customModules:snd"
 include ":server:optionalModules:tnprc_ehr"
 
