Add/remove tnprc_billing module from module sets
SVN r60141 |2018-09-12 03:35:06 +0000

--- a/gradle/settings/ehr.gradle
+++ b/gradle/settings/ehr.gradle
@@ -43,6 +43,7 @@ include ":server:customModules:wnprc_billing"
 include ":server:customModules:wnprc_billingpublic"
 include ":server:customModules:snd"
 include ":server:optionalModules:tnprc_ehr"
+include ":server:optionalModules:tnprc_billing"
 
 // include the test distribution, which is used to create an artifact for TeamCity to pass around to the agents
 include ":server:test:distributions:teamcity"
