--- a/gradle/settings/premium.gradle
+++ b/gradle/settings/premium.gradle
@@ -30,7 +30,7 @@ import org.labkey.gradle.util.BuildUtils
   configuration.  This should be all modules except the EHR modules.
  */
 // a set of directory names that correspond to modules to be excluded from configuration
-List<String> excludedModules = BuildUtils.EHR_MODULE_NAMES + ["ehr_billing", "wnprc_billing", "wnprc_billingpublic"]
+List<String> excludedModules = BuildUtils.EHR_MODULE_NAMES + ["ehr_billing", "tnprc_billing", "wnprc_billing", "wnprc_billingpublic"]
 
 // This line below inclues all modules in the server/modules, server/customModules and server/optionalModules directories
 BuildUtils.includeModules(this.settings, rootDir, BuildUtils.SERVER_MODULE_DIRS, excludedModules);
