Upgrade to Gradle 4.10.2
SVN r60340 |2018-09-24 14:21:36 +0000

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,5 @@
+// This prevents the warning from gradle about features being deprecated/removed in Gradle 5
+enableFeaturePreview('STABLE_PUBLISHING')
 
 buildscript {
     repositories {
