Spec 35238 DataIntegration module move to git
SVN r60372 |2018-09-25 22:24:39 +0000

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -67,8 +67,8 @@ if (project.findProject(":server:modules:list") != null)
     xsdFiles += project.project(":server:modules:list").file("schemas/lists.xsd");
 if (project.findProject(":server:modules:pipeline")  != null)
     xsdFiles += project.project(":server:modules:pipeline").file("schemas/pipelineTasks.xsd")
-if (project.findProject(":server:modules:dataintegration")  != null)
-    xsdFiles += project.project(":server:modules:dataintegration").file("schemas/etl.xsd")
+if (project.findProject(":server:optionalModules:dataintegration")  != null)
+    xsdFiles += project.project(":server:optionalModules:dataintegration").file("schemas/etl.xsd")
 if (project.findProject(":server:optionalModules:redcap") != null)
     xsdFiles += project.project(":server:optionalModules:redcap").file("schemas/redcapExport.xsd")
 if (project.findProject(":server:optionalModules:cdisc_ODM") != null)
