Update to Spring 4.3.20.RELEASE (for better Java 11 compatibility)
SVN r60747 |2018-10-20 00:42:41 +0000

--- a/gradle.properties
+++ b/gradle.properties
@@ -185,7 +185,9 @@ slf4jLog4j12Version=1.7.5
 # this version is forced for compatibility with api, LDK, and workflow
 slf4jLog4jApiVersion=1.7.16
 
-springVersion=4.1.5.RELEASE
+# N.B. Spring version 5+ brings in a change to form handling such that GET and POST parameters are both used when
+# posting a form.  For some of our forms this causes heartache.
+springVersion=4.3.20.RELEASE
 
 sqliteJdbcVersion=3.7.2
 
