Relocate schemas to server/api
SVN r60757 |2018-10-22 01:21:12 +0000

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -2,7 +2,6 @@ import org.labkey.gradle.task.CreateModule
 import org.labkey.gradle.util.BuildUtils
 
 BuildUtils.addLabKeyDependency(project: project, config: 'jars', depProjectPath: ":remoteapi:java", transitive: true)
-BuildUtils.addLabKeyDependency(project: project, config: 'jars', depProjectPath: ":schemas", depProjectConfig: "xmlSchema")
 BuildUtils.addLabKeyDependency(project: project, config: 'tomcatJars', depProjectPath: ":server:bootstrap")
 dependencies
         {
@@ -34,29 +33,32 @@ apply plugin: 'org.labkey.serverDeploy'
 apply plugin: 'org.labkey.database'
 
 // This a subset of the XSDs because dependencies get pulled in.
+
+String apiProjectPath = BuildUtils.getProjectPath(project.gradle, "apiProjectPath", ":server:api")
+
 List<File> xsdFiles = [
-    project.project(":schemas").file("clientLibrary.xsd"),
-    project.project(":schemas").file("apiTest.xsd"),
-    project.project(":schemas").file("cohorts.xsd"),
-    project.project(":schemas").file("datasets.xsd"),
-    project.project(":schemas").file("domainTemplate.xsd"),
-    project.project(":schemas").file("externalSchema.xsd"),
-    project.project(":schemas").file("folder.xsd"),
-    project.project(":schemas").file("folderType.xsd"),
-    project.project(":schemas").file("module.xsd"),
-    project.project(":schemas").file("pages.xsd"),
-    project.project(":schemas").file("participantGroups.xsd"),
-    project.project(":schemas").file("pipelineOptions.xsd"),
-    project.project(":schemas").file("pipelineProtocolProps.xsd"),
-    project.project(":schemas").file("qcStates.xsd"),
-    project.project(":schemas").file("query.xsd"),
-    project.project(":schemas").file("report.xsd"),
-    project.project(":schemas").file("reportProps.xsd"),
-    project.project(":schemas").file("studyDesign.xsd"),
-    project.project(":schemas").file("studyViews.xsd"),
-    project.project(":schemas").file("view.xsd"),
-    project.project(":schemas").file("viewCategory.xsd"),
-    project.project(":schemas").file("visitMap.xsd")
+    project.project(apiProjectPath).file("schemas/clientLibrary.xsd"),
+    project.project(apiProjectPath).file("schemas/apiTest.xsd"),
+    project.project(apiProjectPath).file("schemas/cohorts.xsd"),
+    project.project(apiProjectPath).file("schemas/datasets.xsd"),
+    project.project(apiProjectPath).file("schemas/domainTemplate.xsd"),
+    project.project(apiProjectPath).file("schemas/externalSchema.xsd"),
+    project.project(apiProjectPath).file("schemas/folder.xsd"),
+    project.project(apiProjectPath).file("schemas/folderType.xsd"),
+    project.project(apiProjectPath).file("schemas/module.xsd"),
+    project.project(apiProjectPath).file("schemas/pages.xsd"),
+    project.project(apiProjectPath).file("schemas/participantGroups.xsd"),
+    project.project(apiProjectPath).file("schemas/pipelineOptions.xsd"),
+    project.project(apiProjectPath).file("schemas/pipelineProtocolProps.xsd"),
+    project.project(apiProjectPath).file("schemas/qcStates.xsd"),
+    project.project(apiProjectPath).file("schemas/query.xsd"),
+    project.project(apiProjectPath).file("schemas/report.xsd"),
+    project.project(apiProjectPath).file("schemas/reportProps.xsd"),
+    project.project(apiProjectPath).file("schemas/studyDesign.xsd"),
+    project.project(apiProjectPath).file("schemas/studyViews.xsd"),
+    project.project(apiProjectPath).file("schemas/view.xsd"),
+    project.project(apiProjectPath).file("schemas/viewCategory.xsd"),
+    project.project(apiProjectPath).file("schemas/visitMap.xsd")
 ]
 if (project.findProject(":server:modules:study") != null)
 {
