--- a/gradle/settings/parameters.gradle
+++ b/gradle/settings/parameters.gradle
@@ -4,5 +4,5 @@ gradle.ext.apiProjectPath=":server:api"
 gradle.ext.bootstrapProjectPath=":server:bootstrap"
 gradle.ext.internalProjectPath=":server:internal"
 gradle.ext.remoteApiProjectPath=":remoteapi:java"
-gradle.ext.schemasProjectPath=":schemas" // if schemas gets disbanded into separate repositories, this likely changes to :server:api
+gradle.ext.schemasProjectPath=":server:api" // Remove this after references in gradle plugins have been removed/updated
 gradle.ext.nodeBinProjectPath=":" // The npm and node executables downloaded into this project's build directory will be the target of the links created by the synlinkNode task
