--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 #moduleSet=all
 #ideaIncludeAllModules=true
-#org.gradle.parallel=true
+org.gradle.parallel=true
 
 # the URL for the artifact repository where our build plugins are housed
 # as well as the build artifacts. (Be careful not to include a trailing slash 
@@ -8,8 +8,8 @@
 artifactory_contextUrl=https://artifactory.labkey.com/artifactory
 
 # The source and target versions of Java for compilation tasks
-sourceCompatibility=1.8
-targetCompatibility=1.8
+sourceCompatibility=11
+targetCompatibility=11
 
 # indicates if we should use previously published artifacts or build from source
 # This setting applies to all projects unless overridden on command line or in a
