Sync version of lib used by DISCVR and Premium modules.
SVN r61689 |2019-01-07 19:27:24 +0000

--- a/gradle.properties
+++ b/gradle.properties
@@ -214,3 +214,6 @@ xmlbeansVersion=3.0.1
 # Note that 2.4.8 fails with absolute paths on Windows, https://github.com/yui/yuicompressor/issues/78,
 # but the issue is fixed on yuicompressor current master.
 yuiCompressorVersion=2.4.8a
+
+#Unifying version used by DISCVR and Premium
+apacheDirectoryVersion=1.0.2
