--- a/gradle.properties
+++ b/gradle.properties
@@ -206,9 +206,9 @@ xercesImplVersion=2.11.0
 # using the relocated version
 xmlApisVersion=1.0.b2
 
-# Issue 33146: We want 2.5.0 for now, even though it is not the latest. 2.6.0 (at least) introduces
-# some bad encoding behavior.
 xmlbeansVersion=3.0.1
 
 #Unifying version used by DISCVR and Premium
 apacheDirectoryVersion=1.0.2
+#Transitive dependency of Apache directory: 2.0.18 contains some regressions
+apacheMinaVersion=2.0.19
