Upgrade MySQL JDBC Driver 8.0.11 -> 8.0.13
Credits: Correct PostgreSQL JDBC Driver version and update MySQL JDBC Driver license.

Placeholders for JavaMail 1.6.1 -> 1.6.3 upgrade (pending Gradle Plugin change).

SVN r61789 |2019-01-12 17:04:06 +0000

--- a/gradle.properties
+++ b/gradle.properties
@@ -47,7 +47,7 @@ npmWorkDirectory=.node
 # have extensive other external dependencies should have a local
 # gradle.properties file to declare these version numbers.
 
-# workflow (Activiti), galaxyintegration, and javax.mail bring in different versions of javax.activation:activation transitively, so
+# workflow (Activiti), galaxyintegration, and jakarta.mail bring in different versions of javax.activation:activation transitively, so
 # we force the latest version
 activationVersion=1.2.0
 
@@ -128,6 +128,7 @@ jacksonJaxrsBaseVersion=2.9.5
 jamaVersion=1.0.2
 
 javaxMailVersion=1.6.1
+#javaxMailVersion=1.6.3
 
 # No longer part of Java 10. Dependency for NIHS and OpenEMPI.
 jaxbVersion=2.3.0
@@ -156,7 +157,7 @@ kaptchaVersion=2.3
 
 log4jVersion=1.2.17
 
-mysqlDriverVersion=8.0.11
+mysqlDriverVersion=8.0.13
 
 objenesisVersion=1.0
 
