--- a/gradle.properties
+++ b/gradle.properties
@@ -127,8 +127,7 @@ jacksonJaxrsBaseVersion=2.9.5
 
 jamaVersion=1.0.2
 
-javaxMailVersion=1.6.1
-#javaxMailVersion=1.6.3
+javaMailVersion=1.6.3
 
 # No longer part of Java 10. Dependency for NIHS and OpenEMPI.
 jaxbVersion=2.3.0
