--- a/server/build.gradle
+++ b/server/build.gradle
@@ -5,7 +5,7 @@ BuildUtils.addLabKeyDependency(project: project, config: 'jars', depProjectPath:
 BuildUtils.addLabKeyDependency(project: project, config: 'tomcatJars', depProjectPath: ":server:bootstrap")
 dependencies
         {
-            tomcatJars  "com.sun.mail:javax.mail:${javaxMailVersion}"
+            tomcatJars  "com.sun.mail:jakarta.mail:${javaMailVersion}"
             tomcatJars  "com.sun.activation:javax.activation:${activationVersion}" // JavaMail dependency (starting with Java 10), so it must be copied to <tomcat>/lib
             tomcatJars  "net.sourceforge.jtds:jtds:${jtdsVersion}" // MS SQLServer JDBC Driver
             tomcatJars  "org.postgresql:postgresql:${postgresqlDriverVersion}"
