Update artifact IDs and credits to reflect JavaBeans Activation Framework's move from Oracle to the Eclipse project. This move also means a new jar name, but our gradle plugin 1.4.0 handles renaming this back to javax.activation.jar (our traditional name for the dependency, which gets copied into <tomcat>/lib).
Also "upgrade" Activation version 1.2.0 -> 1.2.1. The jar hasn't changed at all; version got bumped only because of the new project owner.

SVN r61896 |2019-01-18 18:33:28 +0000

--- a/gradle.properties
+++ b/gradle.properties
@@ -47,9 +47,9 @@ npmWorkDirectory=.node
 # have extensive other external dependencies should have a local
 # gradle.properties file to declare these version numbers.
 
-# workflow (Activiti), galaxyintegration, and jakarta.mail bring in different versions of javax.activation:activation transitively, so
+# workflow (Activiti) and JavaMail bring in different versions of javax.activation:activation transitively, so
 # we force the latest version
-activationVersion=1.2.0
+activationVersion=1.2.1
 
 annotationsVersion=15.0
 
