--- a/gradle/settings/consolidation.gradle
+++ b/gradle/settings/consolidation.gradle
@@ -5,10 +5,10 @@
 //    /server/optionalModules
 //    /server/test/modules
 //    
-// Goal is to build all the LabKey modules, i.e., all modules except for externalModules. This module set can be useful when
+// Goal is to build all the LabKey modules, skipping most of the modules in externalModules. This module set can be useful when
 // refactoring core code, performing the end-of-release-cycle script consolidation process, updating licenses, etc.
 //
-// A few external modules are included since the EHR modules depend on them to build and/or run.
+// Some external modules are built: the snprc EHR modules plus EHR build-time and runtime dependencies.
 
 buildscript {
     repositories {
@@ -40,6 +40,11 @@ List<String> excludedModules = [
 include ":externalModules:labModules:LDK"                // EHR modules depend on LDK
 include ":externalModules:labModules:laboratory"         // Without this, EHR builds fail with "Could not find LDK-api.jar" error
 include ":externalModules:onprcEHRModules:mergesync"     // onprc_ehr runtime dependency
+
+include ":externalModules:snprcEHRModules:snprc_ehr"
+include ":externalModules:snprcEHRModules:snprc_genetics"
+include ":externalModules:snprcEHRModules:snprc_r24"
+include ":externalModules:snprcEHRModules:snprc_scheduler"
 
 // This line includes all modules in the server/modules, server/customModules and server/optionalModules directories
 BuildUtils.includeModules(this.settings, rootDir, BuildUtils.SERVER_MODULE_DIRS, excludedModules);
