"Annotate" gradle properties that should change with Java version changes
SVN r62710 |2019-02-27 01:07:23 +0000

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@
 # in the context URL or you will get a 500 error from artifactory.)
 artifactory_contextUrl=https://artifactory.labkey.com/artifactory
 
-# The source and target versions of Java for compilation tasks
+# The source and target versions of Java for compilation tasks @JavaRuntimeVersion
 sourceCompatibility=11
 targetCompatibility=11
 
