--- a/gradle.properties
+++ b/gradle.properties
@@ -19,7 +19,7 @@ buildFromSource=true
 
 # The default version for LabKey artifacts that are built or that we depend on.
 # override in an individual module's gradle.properties file as necessary 
-`labkeyVersion=19.2.0-SNAPSHOT
+labkeyVersion=19.2.0-SNAPSHOT
 
 # The current version numbers for the gradle plugins.
 bintrayPluginVersion=1.8.4
