--- a/gradle/settings/parameters.gradle
+++ b/gradle/settings/parameters.gradle
@@ -1,5 +1,6 @@
 // Parameterize the paths for these projects as they are used in our build logic
 // but, because they are non-standard, are likely to change as we move from SVN to Git
+gradle.ext.platformProjectPath=":server:modules" // The gradle path to the project containing the platform (base) modules such as core and experiment
 gradle.ext.apiProjectPath=":server:api"
 gradle.ext.bootstrapProjectPath=":server:bootstrap"
 gradle.ext.internalProjectPath=":server:internal"
