Add property for location of common assays modules in anticipation of reorganization in git repositories
SVN r63035 |2019-03-19 16:43:54 +0000

--- a/gradle/settings/parameters.gradle
+++ b/gradle/settings/parameters.gradle
@@ -1,6 +1,7 @@
 // Parameterize the paths for these projects as they are used in our build logic
 // but, because they are non-standard, are likely to change as we move from SVN to Git
 gradle.ext.platformProjectPath=":server:modules" // The gradle path to the project containing the platform (base) modules such as core and experiment
+gradle.ext.commonAssaysProjectPath=":server:modules" // The gradle path to the project containing the common assay modules such as ms2 and elisa
 gradle.ext.apiProjectPath=":server:api"
 gradle.ext.bootstrapProjectPath=":server:bootstrap"
 gradle.ext.internalProjectPath=":server:internal"
